# imgui_desktop

./: .gitignore  .gitmodules  CMakeLists.txt  Shared.props  imgui.cmake  imgui_desktop.sln  vcpkg-configuration.json  vcpkg.json
imgui/: CMakeLists.txt  imgui.props  imgui.vcxproj
imgui_desktop/: imgui_desktop.props  imgui_desktop.vcxproj
imgui_desktop/include/imgui_desktop/: Application.h  GLContextVersion.h  ImGuiHelpers.h  ScopeGuards.h  StorageHelper.h  Window.h
imgui_desktop/src/: Application.cpp  GLContext.cpp  GLContext.h  ImGuiDesktopInternal.h  ScopeGuards.cpp  Window.cpp
